--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "enzyme": "^3.5.0",
-    "enzyme-adapter-react-16": "^1.3.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -37,22 +37,22 @@
     "prop-types": "^15.6.2",
     "radium": "^0.24.1",
     "raf": "3.4.0",
-    "react": "^16.4.2",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.2",
+    "react": "^16.6.3",
+    "react-dev-utils": "^6.1.1",
+    "react-dom": "^16.6.3",
     "react-polyfills": "0.0.1",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.4.2",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
+    "react-test-renderer": "^16.6.3",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
+    "webpack-dev-server": "^3.1.10",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
